# GISTEmbed

./: .gitignore  README.md  pyproject.toml  train_finetune.py
covid/scripts/: compile_medi_mteb_covid_avs_triplets.py  create_covid_triplets_dataset.py  gen_covid_triplets.py  get_covid_query_set.py  make_dataset.py
evaluation/: README.md  mteb_eval.py
experiments/: 01-600-11-1-2-2-0-0-cls-normed-384-512_run_finetune_experiment.sh
gist_embed/: __init__.py  base.py  util.py  validator.py
gist_embed/trainer/: __init__.py  callbacks.py  loss.py  trainer.py
gist_embed/trainer/arguments/: __init__.py  callback.py  data.py  gist.py  model.py  trainer.py
scripts/: compile_mteb_avs_triplets.py  compute_dupstack.py  create_classification_dataset.py  dump_wandb.py  evaluate_medi_data.py  flatten_results.py  medi_data_task_name2id.py  medi_to_hfhub.py  parse_commits.py
